# slidesave

./: LICENSE  README.md  app.py  gui.py  install-slidesave  install-slideshare  pyproject.toml  requirements.txt
src/slidesave/: app.py  gui.py
